Full functionality of event-service is implemented